cluster/apps/monitoring/kube-prometheus/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: traefik-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
  name: grafana-ingress
  namespace: monitoring
spec:
  rules:
    - host: grafana.amrap030.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-grafana
                port:
                  number: 80    
  tls:
    - hosts:
        - grafana.amrap030.home
      secretName: grafana-cert
